--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "date-fns": "^2.16.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-file-base64": "^1.0.3",
+    "react-loadingg": "^1.7.2",
     "react-redux": "^7.2.0",
+    "react-redux-loading-bar": "^5.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
